lab4/compilers-lab4-src/cool-bison-parser.output
Терминалы не используются в грамматике

    ERROR


Грамматика

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | error ';' class

    5 class: CLASS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    7 feature_list: ε
    8             | feature_list feature

    9 feature: OBJECTID ':' TYPEID optional_assign ';'
   10        | OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   11        | error ';'

   12 formal_list: ε
   13            | formal
   14            | formal_list ',' formal

   15 formal: OBJECTID ':' TYPEID

   16 expr_list_comma: ε
   17                | expr
   18                | expr_list_comma ',' expr

   19 expr_list_simicolon: expr ';'
   20                    | expr_list_simicolon expr ';'
   21                    | error ';'

   22 expr: STR_CONST
   23     | INT_CONST
   24     | BOOL_CONST
   25     | OBJECTID
   26     | OBJECTID ASSIGN expr
   27     | expr '.' OBJECTID '(' expr_list_comma ')'
   28     | OBJECTID '(' expr_list_comma ')'
   29     | expr '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   30     | IF expr THEN expr ELSE expr FI
   31     | WHILE expr LOOP expr POOL
   32     | '{' expr_list_simicolon '}'
   33     | let_expr
   34     | CASE expr OF case_list ESAC
   35     | NEW TYPEID
   36     | ISVOID expr
   37     | expr '+' expr
   38     | expr '-' expr
   39     | expr '*' expr
   40     | expr '/' expr
   41     | '~' expr
   42     | expr '<' expr
   43     | expr '=' expr
   44     | expr LE expr
   45     | NOT expr
   46     | '(' expr ')'

   47 case_list: ε
   48          | case_list case

   49 case: OBJECTID ':' TYPEID DARROW expr ';'

   50 let_expr: LET let_binding_list IN expr

   51 let_binding_list: let_binding
   52                 | let_binding_list ',' let_binding
   53                 | error ',' let_binding

   54 let_binding: OBJECTID ':' TYPEID optional_assign

   55 optional_assign: ε
   56                | ASSIGN expr


Терминальные символы с правилами, в которых они появляются

    $end (0) 0
    '(' (40) 10 27 28 29 46
    ')' (41) 10 27 28 29 46
    '*' (42) 39
    '+' (43) 37
    ',' (44) 14 18 52 53
    '-' (45) 38
    '.' (46) 27 29
    '/' (47) 40
    ':' (58) 9 10 15 49 54
    ';' (59) 4 5 6 9 10 11 19 20 21 49
    '<' (60) 42
    '=' (61) 43
    '@' (64) 29
    '{' (123) 5 6 10 32
    '}' (125) 5 6 10 32
    '~' (126) 41
    error (256) 4 11 21 53
    CLASS (258) 5 6
    ELSE (259) 30
    FI (260) 30
    IF (261) 30
    IN (262) 50
    INHERITS (263) 6
    LET (264) 50
    LOOP (265) 31
    POOL (266) 31
    THEN (267) 30
    WHILE (268) 31
    CASE (269) 34
    ESAC (270) 34
    OF (271) 34
    DARROW (272) 49
    NEW (273) 35
    ISVOID (274) 36
    STR_CONST <symbol> (275) 22
    INT_CONST <symbol> (276) 23
    BOOL_CONST <boolean> (277) 24
    TYPEID <symbol> (278) 5 6 9 10 15 29 35 49 54
    OBJECTID <symbol> (279) 9 10 15 25 26 27 28 29 49 54
    ASSIGN (280) 26 56
    NOT (281) 45
    LE (282) 44
    ERROR (283)


Нетерминальные символы с правилами, в которых они появляются

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3 4
        on right: 1 3
    class <class_> (48)
        on left: 5 6
        on right: 2 3 4
    feature_list <features> (49)
        on left: 7 8
        on right: 5 6 8
    feature <feature> (50)
        on left: 9 10 11
        on right: 8
    formal_list <formals> (51)
        on left: 12 13 14
        on right: 10 14
    formal <formal> (52)
        on left: 15
        on right: 13 14
    expr_list_comma <expressions> (53)
        on left: 16 17 18
        on right: 18 27 28 29
    expr_list_simicolon <expressions> (54)
        on left: 19 20 21
        on right: 20 32
    expr <expression> (55)
        on left: 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46
        on right: 10 17 18 19 20 26 27 29 30 31 34 36 37 38 39 40 41 42 43 44 45 46 49 50 56
    case_list <cases> (56)
        on left: 47 48
        on right: 34 48
    case <case_> (57)
        on left: 49
        on right: 48
    let_expr <expression> (58)
        on left: 50
        on right: 33
    let_binding_list <expression> (59)
        on left: 51 52 53
        on right: 50 52
    let_binding <expression> (60)
        on left: 54
        on right: 51 52 53
    optional_assign <expression> (61)
        on left: 55 56
        on right: 9 54


State 0

    0 $accept: • program $end

    error  сдвиг, и переход в состояние 1
    CLASS  сдвиг, и переход в состояние 2

    program     переход в состояние 3
    class_list  переход в состояние 4
    class       переход в состояние 5


State 1

    4 class_list: error • ';' class

    ';'  сдвиг, и переход в состояние 6


State 2

    5 class: CLASS • TYPEID '{' feature_list '}' ';'
    6      | CLASS • TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  сдвиг, и переход в состояние 7


State 3

    0 $accept: program • $end

    $end  сдвиг, и переход в состояние 8


State 4

    1 program: class_list •
    3 class_list: class_list • class

    CLASS  сдвиг, и переход в состояние 2

    $default  вывод с использованием правила 1 (program)

    class  переход в состояние 9


State 5

    2 class_list: class •

    $default  вывод с использованием правила 2 (class_list)


State 6

    4 class_list: error ';' • class

    CLASS  сдвиг, и переход в состояние 2

    class  переход в состояние 10


State 7

    5 class: CLASS TYPEID • '{' feature_list '}' ';'
    6      | CLASS TYPEID • INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  сдвиг, и переход в состояние 11
    '{'       сдвиг, и переход в состояние 12


State 8

    0 $accept: program $end •

    $default  принять


State 9

    3 class_list: class_list class •

    $default  вывод с использованием правила 3 (class_list)


State 10

    4 class_list: error ';' class •

    $default  вывод с использованием правила 4 (class_list)


State 11

    6 class: CLASS TYPEID INHERITS • TYPEID '{' feature_list '}' ';'

    TYPEID  сдвиг, и переход в состояние 13


State 12

    5 class: CLASS TYPEID '{' • feature_list '}' ';'

    $default  вывод с использованием правила 7 (feature_list)

    feature_list  переход в состояние 14


State 13

    6 class: CLASS TYPEID INHERITS TYPEID • '{' feature_list '}' ';'

    '{'  сдвиг, и переход в состояние 15


State 14

    5 class: CLASS TYPEID '{' feature_list • '}' ';'
    8 feature_list: feature_list • feature

    error     сдвиг, и переход в состояние 16
    OBJECTID  сдвиг, и переход в состояние 17
    '}'       сдвиг, и переход в состояние 18

    feature  переход в состояние 19


State 15

    6 class: CLASS TYPEID INHERITS TYPEID '{' • feature_list '}' ';'

    $default  вывод с использованием правила 7 (feature_list)

    feature_list  переход в состояние 20


State 16

   11 feature: error • ';'

    ';'  сдвиг, и переход в состояние 21


State 17

    9 feature: OBJECTID • ':' TYPEID optional_assign ';'
   10        | OBJECTID • '(' formal_list ')' ':' TYPEID '{' expr '}' ';'

    ':'  сдвиг, и переход в состояние 22
    '('  сдвиг, и переход в состояние 23


State 18

    5 class: CLASS TYPEID '{' feature_list '}' • ';'

    ';'  сдвиг, и переход в состояние 24


State 19

    8 feature_list: feature_list feature •

    $default  вывод с использованием правила 8 (feature_list)


State 20

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list • '}' ';'
    8 feature_list: feature_list • feature

    error     сдвиг, и переход в состояние 16
    OBJECTID  сдвиг, и переход в состояние 17
    '}'       сдвиг, и переход в состояние 25

    feature  переход в состояние 19


State 21

   11 feature: error ';' •

    $default  вывод с использованием правила 11 (feature)


State 22

    9 feature: OBJECTID ':' • TYPEID optional_assign ';'

    TYPEID  сдвиг, и переход в состояние 26


State 23

   10 feature: OBJECTID '(' • formal_list ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  сдвиг, и переход в состояние 27

    $default  вывод с использованием правила 12 (formal_list)

    formal_list  переход в состояние 28
    formal       переход в состояние 29


State 24

    5 class: CLASS TYPEID '{' feature_list '}' ';' •

    $default  вывод с использованием правила 5 (class)


State 25

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' • ';'

    ';'  сдвиг, и переход в состояние 30


State 26

    9 feature: OBJECTID ':' TYPEID • optional_assign ';'

    ASSIGN  сдвиг, и переход в состояние 31

    $default  вывод с использованием правила 55 (optional_assign)

    optional_assign  переход в состояние 32


State 27

   15 formal: OBJECTID • ':' TYPEID

    ':'  сдвиг, и переход в состояние 33


State 28

   10 feature: OBJECTID '(' formal_list • ')' ':' TYPEID '{' expr '}' ';'
   14 formal_list: formal_list • ',' formal

    ')'  сдвиг, и переход в состояние 34
    ','  сдвиг, и переход в состояние 35


State 29

   13 formal_list: formal •

    $default  вывод с использованием правила 13 (formal_list)


State 30

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' •

    $default  вывод с использованием правила 6 (class)


State 31

   56 optional_assign: ASSIGN • expr

    IF          сдвиг, и переход в состояние 36
    LET         сдвиг, и переход в состояние 37
    WHILE       сдвиг, и переход в состояние 38
    CASE        сдвиг, и переход в состояние 39
    NEW         сдвиг, и переход в состояние 40
    ISVOID      сдвиг, и переход в состояние 41
    STR_CONST   сдвиг, и переход в состояние 42
    INT_CONST   сдвиг, и переход в состояние 43
    BOOL_CONST  сдвиг, и переход в состояние 44
    OBJECTID    сдвиг, и переход в состояние 45
    NOT         сдвиг, и переход в состояние 46
    '~'         сдвиг, и переход в состояние 47
    '{'         сдвиг, и переход в состояние 48
    '('         сдвиг, и переход в состояние 49

    expr      переход в состояние 50
    let_expr  переход в состояние 51


State 32

    9 feature: OBJECTID ':' TYPEID optional_assign • ';'

    ';'  сдвиг, и переход в состояние 52


State 33

   15 formal: OBJECTID ':' • TYPEID

    TYPEID  сдвиг, и переход в состояние 53


State 34

   10 feature: OBJECTID '(' formal_list ')' • ':' TYPEID '{' expr '}' ';'

    ':'  сдвиг, и переход в состояние 54


State 35

   14 formal_list: formal_list ',' • formal

    OBJECTID  сдвиг, и переход в состояние 27

    formal  переход в состояние 55


State 36

   30 expr: IF • expr THEN expr ELSE expr FI

    IF          сдвиг, и переход в состояние 36
    LET         сдвиг, и переход в состояние 37
    WHILE       сдвиг, и переход в состояние 38
    CASE        сдвиг, и переход в состояние 39
    NEW         сдвиг, и переход в состояние 40
    ISVOID      сдвиг, и переход в состояние 41
    STR_CONST   сдвиг, и переход в состояние 42
    INT_CONST   сдвиг, и переход в состояние 43
    BOOL_CONST  сдвиг, и переход в состояние 44
    OBJECTID    сдвиг, и переход в состояние 45
    NOT         сдвиг, и переход в состояние 46
    '~'         сдвиг, и переход в состояние 47
    '{'         сдвиг, и переход в состояние 48
    '('         сдвиг, и переход в состояние 49

    expr      переход в состояние 56
    let_expr  переход в состояние 51


State 37

   50 let_expr: LET • let_binding_list IN expr

    error     сдвиг, и переход в состояние 57
    OBJECTID  сдвиг, и переход в состояние 58

    let_binding_list  переход в состояние 59
    let_binding       переход в состояние 60


State 38

   31 expr: WHILE • expr LOOP expr POOL

    IF          сдвиг, и переход в состояние 36
    LET         сдвиг, и переход в состояние 37
    WHILE       сдвиг, и переход в состояние 38
    CASE        сдвиг, и переход в состояние 39
    NEW         сдвиг, и переход в состояние 40
    ISVOID      сдвиг, и переход в состояние 41
    STR_CONST   сдвиг, и переход в состояние 42
    INT_CONST   сдвиг, и переход в состояние 43
    BOOL_CONST  сдвиг, и переход в состояние 44
    OBJECTID    сдвиг, и переход в состояние 45
    NOT         сдвиг, и переход в состояние 46
    '~'         сдвиг, и переход в состояние 47
    '{'         сдвиг, и переход в состояние 48
    '('         сдвиг, и переход в состояние 49

    expr      переход в состояние 61
    let_expr  переход в состояние 51


State 39

   34 expr: CASE • expr OF case_list ESAC

    IF          сдвиг, и переход в состояние 36
    LET         сдвиг, и переход в состояние 37
    WHILE       сдвиг, и переход в состояние 38
    CASE        сдвиг, и переход в состояние 39
    NEW         сдвиг, и переход в состояние 40
    ISVOID      сдвиг, и переход в состояние 41
    STR_CONST   сдвиг, и переход в состояние 42
    INT_CONST   сдвиг, и переход в состояние 43
    BOOL_CONST  сдвиг, и переход в состояние 44
    OBJECTID    сдвиг, и переход в состояние 45
    NOT         сдвиг, и переход в состояние 46
    '~'         сдвиг, и переход в состояние 47
    '{'         сдвиг, и переход в состояние 48
    '('         сдвиг, и переход в состояние 49

    expr      переход в состояние 62
    let_expr  переход в состояние 51


State 40

   35 expr: NEW • TYPEID

    TYPEID  сдвиг, и переход в состояние 63


State 41

   36 expr: ISVOID • expr

    IF          сдвиг, и переход в состояние 36
    LET         сдвиг, и переход в состояние 37
    WHILE       сдвиг, и переход в состояние 38
    CASE        сдвиг, и переход в состояние 39
    NEW         сдвиг, и переход в состояние 40
    ISVOID      сдвиг, и переход в состояние 41
    STR_CONST   сдвиг, и переход в состояние 42
    INT_CONST   сдвиг, и переход в состояние 43
    BOOL_CONST  сдвиг, и переход в состояние 44
    OBJECTID    сдвиг, и переход в состояние 45
    NOT         сдвиг, и переход в состояние 46
    '~'         сдвиг, и переход в состояние 47
    '{'         сдвиг, и переход в состояние 48
    '('         сдвиг, и переход в состояние 49

    expr      переход в состояние 64
    let_expr  переход в состояние 51


State 42

   22 expr: STR_CONST •

    $default  вывод с использованием правила 22 (expr)


State 43

   23 expr: INT_CONST •

    $default  вывод с использованием правила 23 (expr)


State 44

   24 expr: BOOL_CONST •

    $default  вывод с использованием правила 24 (expr)


State 45

   25 expr: OBJECTID •
   26     | OBJECTID • ASSIGN expr
   28     | OBJECTID • '(' expr_list_comma ')'

    ASSIGN  сдвиг, и переход в состояние 65
    '('     сдвиг, и переход в состояние 66

    $default  вывод с использованием правила 25 (expr)


State 46

   45 expr: NOT • expr

    IF          сдвиг, и переход в состояние 36
    LET         сдвиг, и переход в состояние 37
    WHILE       сдвиг, и переход в состояние 38
    CASE        сдвиг, и переход в состояние 39
    NEW         сдвиг, и переход в состояние 40
    ISVOID      сдвиг, и переход в состояние 41
    STR_CONST   сдвиг, и переход в состояние 42
    INT_CONST   сдвиг, и переход в состояние 43
    BOOL_CONST  сдвиг, и переход в состояние 44
    OBJECTID    сдвиг, и переход в состояние 45
    NOT         сдвиг, и переход в состояние 46
    '~'         сдвиг, и переход в состояние 47
    '{'         сдвиг, и переход в состояние 48
    '('         сдвиг, и переход в состояние 49

    expr      переход в состояние 67
    let_expr  переход в состояние 51


State 47

   41 expr: '~' • expr

    IF          сдвиг, и переход в состояние 36
    LET         сдвиг, и переход в состояние 37
    WHILE       сдвиг, и переход в состояние 38
    CASE        сдвиг, и переход в состояние 39
    NEW         сдвиг, и переход в состояние 40
    ISVOID      сдвиг, и переход в состояние 41
    STR_CONST   сдвиг, и переход в состояние 42
    INT_CONST   сдвиг, и переход в состояние 43
    BOOL_CONST  сдвиг, и переход в состояние 44
    OBJECTID    сдвиг, и переход в состояние 45
    NOT         сдвиг, и переход в состояние 46
    '~'         сдвиг, и переход в состояние 47
    '{'         сдвиг, и переход в состояние 48
    '('         сдвиг, и переход в состояние 49

    expr      переход в состояние 68
    let_expr  переход в состояние 51


State 48

   32 expr: '{' • expr_list_simicolon '}'

    error       сдвиг, и переход в состояние 69
    IF          сдвиг, и переход в состояние 36
    LET         сдвиг, и переход в состояние 37
    WHILE       сдвиг, и переход в состояние 38
    CASE        сдвиг, и переход в состояние 39
    NEW         сдвиг, и переход в состояние 40
    ISVOID      сдвиг, и переход в состояние 41
    STR_CONST   сдвиг, и переход в состояние 42
    INT_CONST   сдвиг, и переход в состояние 43
    BOOL_CONST  сдвиг, и переход в состояние 44
    OBJECTID    сдвиг, и переход в состояние 45
    NOT         сдвиг, и переход в состояние 46
    '~'         сдвиг, и переход в состояние 47
    '{'         сдвиг, и переход в состояние 48
    '('         сдвиг, и переход в состояние 49

    expr_list_simicolon  переход в состояние 70
    expr                 переход в состояние 71
    let_expr             переход в состояние 51


State 49

   46 expr: '(' • expr ')'

    IF          сдвиг, и переход в состояние 36
    LET         сдвиг, и переход в состояние 37
    WHILE       сдвиг, и переход в состояние 38
    CASE        сдвиг, и переход в состояние 39
    NEW         сдвиг, и переход в состояние 40
    ISVOID      сдвиг, и переход в состояние 41
    STR_CONST   сдвиг, и переход в состояние 42
    INT_CONST   сдвиг, и переход в состояние 43
    BOOL_CONST  сдвиг, и переход в состояние 44
    OBJECTID    сдвиг, и переход в состояние 45
    NOT         сдвиг, и переход в состояние 46
    '~'         сдвиг, и переход в состояние 47
    '{'         сдвиг, и переход в состояние 48
    '('         сдвиг, и переход в состояние 49

    expr      переход в состояние 72
    let_expr  переход в состояние 51


State 50

   27 expr: expr • '.' OBJECTID '(' expr_list_comma ')'
   29     | expr • '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   37     | expr • '+' expr
   38     | expr • '-' expr
   39     | expr • '*' expr
   40     | expr • '/' expr
   42     | expr • '<' expr
   43     | expr • '=' expr
   44     | expr • LE expr
   56 optional_assign: ASSIGN expr •

    LE   сдвиг, и переход в состояние 73
    '<'  сдвиг, и переход в состояние 74
    '='  сдвиг, и переход в состояние 75
    '+'  сдвиг, и переход в состояние 76
    '-'  сдвиг, и переход в состояние 77
    '*'  сдвиг, и переход в состояние 78
    '/'  сдвиг, и переход в состояние 79
    '@'  сдвиг, и переход в состояние 80
    '.'  сдвиг, и переход в состояние 81

    $default  вывод с использованием правила 56 (optional_assign)


State 51

   33 expr: let_expr •

    $default  вывод с использованием правила 33 (expr)


State 52

    9 feature: OBJECTID ':' TYPEID optional_assign ';' •

    $default  вывод с использованием правила 9 (feature)


State 53

   15 formal: OBJECTID ':' TYPEID •

    $default  вывод с использованием правила 15 (formal)


State 54

   10 feature: OBJECTID '(' formal_list ')' ':' • TYPEID '{' expr '}' ';'

    TYPEID  сдвиг, и переход в состояние 82


State 55

   14 formal_list: formal_list ',' formal •

    $default  вывод с использованием правила 14 (formal_list)


State 56

   27 expr: expr • '.' OBJECTID '(' expr_list_comma ')'
   29     | expr • '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   30     | IF expr • THEN expr ELSE expr FI
   37     | expr • '+' expr
   38     | expr • '-' expr
   39     | expr • '*' expr
   40     | expr • '/' expr
   42     | expr • '<' expr
   43     | expr • '=' expr
   44     | expr • LE expr

    THEN  сдвиг, и переход в состояние 83
    LE    сдвиг, и переход в состояние 73
    '<'   сдвиг, и переход в состояние 74
    '='   сдвиг, и переход в состояние 75
    '+'   сдвиг, и переход в состояние 76
    '-'   сдвиг, и переход в состояние 77
    '*'   сдвиг, и переход в состояние 78
    '/'   сдвиг, и переход в состояние 79
    '@'   сдвиг, и переход в состояние 80
    '.'   сдвиг, и переход в состояние 81


State 57

   53 let_binding_list: error • ',' let_binding

    ','  сдвиг, и переход в состояние 84


State 58

   54 let_binding: OBJECTID • ':' TYPEID optional_assign

    ':'  сдвиг, и переход в состояние 85


State 59

   50 let_expr: LET let_binding_list • IN expr
   52 let_binding_list: let_binding_list • ',' let_binding

    IN   сдвиг, и переход в состояние 86
    ','  сдвиг, и переход в состояние 87


State 60

   51 let_binding_list: let_binding •

    $default  вывод с использованием правила 51 (let_binding_list)


State 61

   27 expr: expr • '.' OBJECTID '(' expr_list_comma ')'
   29     | expr • '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   31     | WHILE expr • LOOP expr POOL
   37     | expr • '+' expr
   38     | expr • '-' expr
   39     | expr • '*' expr
   40     | expr • '/' expr
   42     | expr • '<' expr
   43     | expr • '=' expr
   44     | expr • LE expr

    LOOP  сдвиг, и переход в состояние 88
    LE    сдвиг, и переход в состояние 73
    '<'   сдвиг, и переход в состояние 74
    '='   сдвиг, и переход в состояние 75
    '+'   сдвиг, и переход в состояние 76
    '-'   сдвиг, и переход в состояние 77
    '*'   сдвиг, и переход в состояние 78
    '/'   сдвиг, и переход в состояние 79
    '@'   сдвиг, и переход в состояние 80
    '.'   сдвиг, и переход в состояние 81


State 62

   27 expr: expr • '.' OBJECTID '(' expr_list_comma ')'
   29     | expr • '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   34     | CASE expr • OF case_list ESAC
   37     | expr • '+' expr
   38     | expr • '-' expr
   39     | expr • '*' expr
   40     | expr • '/' expr
   42     | expr • '<' expr
   43     | expr • '=' expr
   44     | expr • LE expr

    OF   сдвиг, и переход в состояние 89
    LE   сдвиг, и переход в состояние 73
    '<'  сдвиг, и переход в состояние 74
    '='  сдвиг, и переход в состояние 75
    '+'  сдвиг, и переход в состояние 76
    '-'  сдвиг, и переход в состояние 77
    '*'  сдвиг, и переход в состояние 78
    '/'  сдвиг, и переход в состояние 79
    '@'  сдвиг, и переход в состояние 80
    '.'  сдвиг, и переход в состояние 81


State 63

   35 expr: NEW TYPEID •

    $default  вывод с использованием правила 35 (expr)


State 64

   27 expr: expr • '.' OBJECTID '(' expr_list_comma ')'
   29     | expr • '@' TYPEID '.' OBJECTID '(' expr_list_comma ')'
   36     | ISVOID expr •
   37     | expr • '+' expr
   38     | expr • '-' expr
   39     | expr • '*' expr
   40     | expr • '/' expr
   42     | expr • '<' expr
   43     | expr • '=' expr
   44     | expr • LE expr

    '@'  сдвиг, и переход в состояние 80
    '.'  сдвиг, и переход в состояние 81

    $default  вывод с использованием правила 36 (expr)


State 65

   26 expr: OBJECTID ASSIGN • expr

    IF          сдвиг, и переход в состояние 36
    LET         сдвиг, и переход в состояние 37
    WHILE       сдвиг, и переход в состояние 38
    CASE        сдвиг, и переход в состояние 39
    NEW         сдвиг, и переход в состояние 40
    ISVOID      сдвиг, и переход в состояние 41
    STR_CONST   сдвиг, и переход в состояние 42
    INT_CONST   сдвиг, и переход в состояние 43
    BOOL_CONST  сдвиг, и переход в состояние 44
    OBJECTID    сдвиг, и переход в состояние 45
    NOT         сдвиг, и переход в состояние 46
    '~'         сдвиг, и переход в состояние 47
    '{'         сдвиг, и переход в состояние 48
    '('         сдвиг, и переход в состояние 49

    expr      переход в состояние 90
    let_expr  переход в состояние 51


State 66

   28 expr: OBJECTID '(' • expr_list_comma ')'

    IF          сдвиг, и переход в состояние 36
    LET         сдвиг, и переход в состояние 37
    WHILE       сдвиг, и переход в состояние 38
    CASE        сдвиг, и переход в состояние 39
    NEW         сдвиг, и переход в состояние 40
    ISVOID      сдвиг, и переход в состояние 41
    STR_CONST   сдвиг, и переход в состояние 42
    INT_CONST   сдвиг, и переход в состояние 43
    BOOL_CONST  сдвиг, и переход в состояние 44
    OBJECTID    сдвиг, и переход в состояние 45
    NOT         сдвиг, и переход в состояние 46
    '~'         сдвиг, и переход в состояние 47
    '{'         сдвиг, и переход в состояние 48
    '('         сдвиг, и переход в состояние 49

    $default  вывод с использованием правила 16 (expr_list_comma)
